// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: Comment Preservation > should preserve comments in .gitignore 1`] = `
"# Generacy Configuration Files
# This file is added to your .gitignore by Generacy's onboarding PR

# Environment file containing secrets (API keys, tokens)
generacy.env

# Agent state directory (runtime data, conversation history)
.agent-state/
"
`;

exports[`Snapshot: Comment Preservation > should preserve explanatory comments in env template 1`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T15:30:00.000Z
# Generated by: generacy-cli

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_abc123xyz

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=main

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com
"
`;

exports[`Snapshot: Comment Preservation > should preserve header comments in config.yaml 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"
"
`;

exports[`Snapshot: Complete File Sets > should match snapshot for all multi-repo file paths 1`] = `
[
  ".devcontainer/devcontainer.json",
  ".devcontainer/docker-compose.yml",
  ".generacy/.gitignore",
  ".generacy/config.yaml",
  ".generacy/generacy.env.template",
  ".vscode/extensions.json",
]
`;

exports[`Snapshot: Complete File Sets > should match snapshot for all single-repo file paths 1`] = `
[
  ".devcontainer/devcontainer.json",
  ".generacy/.gitignore",
  ".generacy/config.yaml",
  ".generacy/generacy.env.template",
  ".vscode/extensions.json",
]
`;

exports[`Snapshot: Edge Cases > should match snapshot for config.yaml with no dev or clone repos 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"
"
`;

exports[`Snapshot: Edge Cases > should match snapshot for config.yaml with orchestrator section 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_xyz789def"

  # Human-readable project name
  name: "Acme Platform"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/platform-orchestrator"

  # Development repositories (Generacy can create PRs here)
  dev:
    - "acme-corp/api-service"
    - "acme-corp/frontend-app"
    - "acme-corp/worker-service"

  # Clone-only repositories (read-only access, no PRs created)
  clone:
    - "acme-corp/shared-lib"
    - "acme-corp/proto-definitions"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "develop"

# ============================================================================
# Orchestrator Configuration (Multi-Repo Projects)
# ============================================================================

orchestrator:
  # How often the orchestrator checks for new tasks (milliseconds)
  pollIntervalMs: 3000

  # Number of parallel worker containers to spawn
  workerCount: 3
"
`;

exports[`Snapshot: Edge Cases > should match snapshot for docker-compose.yml with multiple repos 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# Multi-repo development environment for Acme Platform
# Orchestrator + Workers architecture for parallel task execution

version: "3.8"

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    container_name: proj_xyz789def-redis
    command: redis-server --appendonly no --save ""
    ports:
      - "6379:6379"
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
    networks:
      - generacy

  # ==========================================================================
  # Orchestrator - Main development container with all repos mounted
  # ==========================================================================
  orchestrator:
    image: mcr.microsoft.com/devcontainers/base:ubuntu
    container_name: proj_xyz789def-orchestrator

    # Install Generacy Dev Container Feature
    features:
      ghcr.io/generacy-ai/features/generacy:1: {}

    # Load environment variables from .generacy/generacy.env
    env_file:
      - ../.generacy/generacy.env

    environment:
      # Redis connection for task queue
      - REDIS_URL=redis://redis:6379

      # Orchestrator-specific settings
      - ROLE=orchestrator
      - WORKER_COUNT=3
      - POLL_INTERVAL_MS=3000

      # Project metadata
      - PROJECT_ID=proj_xyz789def
      - PROJECT_NAME=Acme Platform
      - PRIMARY_REPO=acme-corp/platform-orchestrator

    # Mount all repositories as workspace folders
    volumes:
      # Primary repository
      - ../..:/workspaces/platform-orchestrator:cached

      # Development repositories
      - ../../api-service:/workspaces/api-service:cached
      - ../../frontend-app:/workspaces/frontend-app:cached
      - ../../worker-service:/workspaces/worker-service:cached

      # Clone-only repositories (read-only)
      - ../../shared-lib:/workspaces/shared-lib:cached
      - ../../proto-definitions:/workspaces/proto-definitions:cached

      # Generacy state and cache directories
      - generacy-state:/home/vscode/.generacy
      - vscode-server:/home/vscode/.vscode-server

    working_dir: /workspaces/platform-orchestrator

    # Keep container running
    command: sleep infinity

    healthcheck:
      test: ["CMD", "test", "-f", "/home/vscode/.generacy/ready"]
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s

    depends_on:
      redis:
        condition: service_healthy

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers
  # ==========================================================================
  worker:
    image: mcr.microsoft.com/devcontainers/base:ubuntu

    # Install Generacy Dev Container Feature
    features:
      ghcr.io/generacy-ai/features/generacy:1: {}

    # Load environment variables from .generacy/generacy.env
    env_file:
      - ../.generacy/generacy.env

    environment:
      # Redis connection for task queue
      - REDIS_URL=redis://redis:6379

      # Worker-specific settings
      - ROLE=worker
      - POLL_INTERVAL_MS=3000

      # Project metadata
      - PROJECT_ID=proj_xyz789def

    # Mount all repositories as workspace folders
    volumes:
      # Primary repository
      - ../..:/workspaces/platform-orchestrator:cached

      # Development repositories
      - ../../api-service:/workspaces/api-service:cached
      - ../../frontend-app:/workspaces/frontend-app:cached
      - ../../worker-service:/workspaces/worker-service:cached

      # Clone-only repositories (read-only)
      - ../../shared-lib:/workspaces/shared-lib:cached
      - ../../proto-definitions:/workspaces/proto-definitions:cached

      # Worker-specific state (isolated from orchestrator)
      - vscode-server:/home/vscode/.vscode-server

    working_dir: /workspaces/platform-orchestrator

    # Keep container running
    command: sleep infinity

    # Scale workers based on configuration
    deploy:
      replicas: 3

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_xyz789def-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Orchestrator state (task history, logs, cache)
  generacy-state:
    name: proj_xyz789def-state

  # VS Code Server extensions and settings
  vscode-server:
    name: proj_xyz789def-vscode-server
"
`;

exports[`Snapshot: Edge Cases > should match snapshot for multi-repo devcontainer.json with workspace folders 1`] = `
"{
  "name": "Acme Platform",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/platform-orchestrator",
  "workspaceFolders": [
    {
      "name": "platform-orchestrator (primary)",
      "path": "/workspaces/platform-orchestrator"
    },
    {
      "name": "api-service",
      "path": "/workspaces/api-service"
    },
        {
      "name": "frontend-app",
      "path": "/workspaces/frontend-app"
    },
        {
      "name": "worker-service",
      "path": "/workspaces/worker-service"
    }
    ,
    {
      "name": "shared-lib (clone)",
      "path": "/workspaces/shared-lib"
    },
        {
      "name": "proto-definitions (clone)",
      "path": "/workspaces/proto-definitions"
    }
    
  ],
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent JSON formatting across templates 1`] = `
"{
  "name": "E-Commerce API",
  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
  "features": {
    "ghcr.io/generacy-ai/generacy/generacy:1": {}
  },
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent JSON formatting across templates 2`] = `
"{
  "recommendations": [
    "generacy-ai.agency",
    "generacy-ai.generacy"
  ]
}
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent YAML formatting in config.yaml 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"
"
`;

exports[`Snapshot: Format Consistency > should maintain consistent YAML formatting in config.yaml 2`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_xyz789def"

  # Human-readable project name
  name: "Acme Platform"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/platform-orchestrator"

  # Development repositories (Generacy can create PRs here)
  dev:
    - "acme-corp/api-service"
    - "acme-corp/frontend-app"
    - "acme-corp/worker-service"

  # Clone-only repositories (read-only access, no PRs created)
  clone:
    - "acme-corp/shared-lib"
    - "acme-corp/proto-definitions"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "develop"

# ============================================================================
# Orchestrator Configuration (Multi-Repo Projects)
# ============================================================================

orchestrator:
  # How often the orchestrator checks for new tasks (milliseconds)
  pollIntervalMs: 3000

  # Number of parallel worker containers to spawn
  workerCount: 3
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for .gitignore (multi-repo) 1`] = `
"# Generacy Configuration Files
# This file is added to your .gitignore by Generacy's onboarding PR

# Environment file containing secrets (API keys, tokens)
generacy.env

# Agent state directory (runtime data, conversation history)
.agent-state/
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for config.yaml (multi-repo) 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_xyz789def"

  # Human-readable project name
  name: "Acme Platform"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/platform-orchestrator"

  # Development repositories (Generacy can create PRs here)
  dev:
    - "acme-corp/api-service"
    - "acme-corp/frontend-app"
    - "acme-corp/worker-service"

  # Clone-only repositories (read-only access, no PRs created)
  clone:
    - "acme-corp/shared-lib"
    - "acme-corp/proto-definitions"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "develop"

# ============================================================================
# Orchestrator Configuration (Multi-Repo Projects)
# ============================================================================

orchestrator:
  # How often the orchestrator checks for new tasks (milliseconds)
  pollIntervalMs: 3000

  # Number of parallel worker containers to spawn
  workerCount: 3
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for devcontainer.json (multi-repo) 1`] = `
"{
  "name": "Acme Platform",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/platform-orchestrator",
  "workspaceFolders": [
    {
      "name": "platform-orchestrator (primary)",
      "path": "/workspaces/platform-orchestrator"
    },
    {
      "name": "api-service",
      "path": "/workspaces/api-service"
    },
        {
      "name": "frontend-app",
      "path": "/workspaces/frontend-app"
    },
        {
      "name": "worker-service",
      "path": "/workspaces/worker-service"
    }
    ,
    {
      "name": "shared-lib (clone)",
      "path": "/workspaces/shared-lib"
    },
        {
      "name": "proto-definitions (clone)",
      "path": "/workspaces/proto-definitions"
    }
    
  ],
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for docker-compose.yml (multi-repo) 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# Multi-repo development environment for Acme Platform
# Orchestrator + Workers architecture for parallel task execution

version: "3.8"

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    container_name: proj_xyz789def-redis
    command: redis-server --appendonly no --save ""
    ports:
      - "6379:6379"
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
    networks:
      - generacy

  # ==========================================================================
  # Orchestrator - Main development container with all repos mounted
  # ==========================================================================
  orchestrator:
    image: mcr.microsoft.com/devcontainers/base:ubuntu
    container_name: proj_xyz789def-orchestrator

    # Install Generacy Dev Container Feature
    features:
      ghcr.io/generacy-ai/features/generacy:1: {}

    # Load environment variables from .generacy/generacy.env
    env_file:
      - ../.generacy/generacy.env

    environment:
      # Redis connection for task queue
      - REDIS_URL=redis://redis:6379

      # Orchestrator-specific settings
      - ROLE=orchestrator
      - WORKER_COUNT=3
      - POLL_INTERVAL_MS=3000

      # Project metadata
      - PROJECT_ID=proj_xyz789def
      - PROJECT_NAME=Acme Platform
      - PRIMARY_REPO=acme-corp/platform-orchestrator

    # Mount all repositories as workspace folders
    volumes:
      # Primary repository
      - ../..:/workspaces/platform-orchestrator:cached

      # Development repositories
      - ../../api-service:/workspaces/api-service:cached
      - ../../frontend-app:/workspaces/frontend-app:cached
      - ../../worker-service:/workspaces/worker-service:cached

      # Clone-only repositories (read-only)
      - ../../shared-lib:/workspaces/shared-lib:cached
      - ../../proto-definitions:/workspaces/proto-definitions:cached

      # Generacy state and cache directories
      - generacy-state:/home/vscode/.generacy
      - vscode-server:/home/vscode/.vscode-server

    working_dir: /workspaces/platform-orchestrator

    # Keep container running
    command: sleep infinity

    healthcheck:
      test: ["CMD", "test", "-f", "/home/vscode/.generacy/ready"]
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s

    depends_on:
      redis:
        condition: service_healthy

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers
  # ==========================================================================
  worker:
    image: mcr.microsoft.com/devcontainers/base:ubuntu

    # Install Generacy Dev Container Feature
    features:
      ghcr.io/generacy-ai/features/generacy:1: {}

    # Load environment variables from .generacy/generacy.env
    env_file:
      - ../.generacy/generacy.env

    environment:
      # Redis connection for task queue
      - REDIS_URL=redis://redis:6379

      # Worker-specific settings
      - ROLE=worker
      - POLL_INTERVAL_MS=3000

      # Project metadata
      - PROJECT_ID=proj_xyz789def

    # Mount all repositories as workspace folders
    volumes:
      # Primary repository
      - ../..:/workspaces/platform-orchestrator:cached

      # Development repositories
      - ../../api-service:/workspaces/api-service:cached
      - ../../frontend-app:/workspaces/frontend-app:cached
      - ../../worker-service:/workspaces/worker-service:cached

      # Clone-only repositories (read-only)
      - ../../shared-lib:/workspaces/shared-lib:cached
      - ../../proto-definitions:/workspaces/proto-definitions:cached

      # Worker-specific state (isolated from orchestrator)
      - vscode-server:/home/vscode/.vscode-server

    working_dir: /workspaces/platform-orchestrator

    # Keep container running
    command: sleep infinity

    # Scale workers based on configuration
    deploy:
      replicas: 3

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_xyz789def-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Orchestrator state (task history, logs, cache)
  generacy-state:
    name: proj_xyz789def-state

  # VS Code Server extensions and settings
  vscode-server:
    name: proj_xyz789def-vscode-server
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for extensions.json (multi-repo) 1`] = `
"{
  "recommendations": [
    "generacy-ai.agency",
    "generacy-ai.generacy"
  ]
}
"
`;

exports[`Snapshot: Multi-Repo Templates > should match snapshot for generacy.env.template (multi-repo) 1`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T16:45:30.123Z
# Generated by: generacy-cloud

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_xyz789def

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=develop

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com

# ============================================================================
# Multi-Repo Orchestration (Multi-Repo Projects Only)
# ============================================================================

# Poll interval for orchestrator task queue (milliseconds)
# How often workers check for new tasks
# Default: 3000ms (configured in config.yaml)
# POLL_INTERVAL_MS=3000

# Worker timeout for long-running tasks (seconds)
# Adjust if your tasks typically take longer than 30 minutes
# WORKER_TIMEOUT_SECONDS=1800
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for .gitignore (single-repo) 1`] = `
"# Generacy Configuration Files
# This file is added to your .gitignore by Generacy's onboarding PR

# Environment file containing secrets (API keys, tokens)
generacy.env

# Agent state directory (runtime data, conversation history)
.agent-state/
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for config.yaml (single-repo) 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for devcontainer.json (single-repo) 1`] = `
"{
  "name": "E-Commerce API",
  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
  "features": {
    "ghcr.io/generacy-ai/generacy/generacy:1": {}
  },
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for extensions.json (single-repo) 1`] = `
"{
  "recommendations": [
    "generacy-ai.agency",
    "generacy-ai.generacy"
  ]
}
"
`;

exports[`Snapshot: Single-Repo Templates > should match snapshot for generacy.env.template (single-repo) 1`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T15:30:00.000Z
# Generated by: generacy-cli

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_abc123xyz

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=main

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com
"
`;

exports[`Snapshot: Special Values > should correctly render Generacy feature references 1`] = `
"{
  "name": "E-Commerce API",
  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
  "features": {
    "ghcr.io/generacy-ai/generacy/generacy:1": {}
  },
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Special Values > should correctly render base images in devcontainer templates 1`] = `
"{
  "name": "E-Commerce API",
  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
  "features": {
    "ghcr.io/generacy-ai/generacy/generacy:1": {}
  },
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Special Values > should correctly render base images in devcontainer templates 2`] = `
"{
  "name": "Acme Platform",
  "dockerComposeFile": "docker-compose.yml",
  "service": "orchestrator",
  "workspaceFolder": "/workspaces/platform-orchestrator",
  "workspaceFolders": [
    {
      "name": "platform-orchestrator (primary)",
      "path": "/workspaces/platform-orchestrator"
    },
    {
      "name": "api-service",
      "path": "/workspaces/api-service"
    },
        {
      "name": "frontend-app",
      "path": "/workspaces/frontend-app"
    },
        {
      "name": "worker-service",
      "path": "/workspaces/worker-service"
    }
    ,
    {
      "name": "shared-lib (clone)",
      "path": "/workspaces/shared-lib"
    },
        {
      "name": "proto-definitions (clone)",
      "path": "/workspaces/proto-definitions"
    }
    
  ],
  "customizations": {
    "vscode": {
      "extensions": [
        "generacy-ai.agency",
        "generacy-ai.generacy"
      ]
    }
  }
}
"
`;

exports[`Snapshot: Special Values > should correctly render project IDs in config and env template 1`] = `
"# .generacy/config.yaml
# Generated: 2026-02-24T15:30:00.000Z
# Schema version: 1.0.0
# Generated by: generacy-cli
#
# This file defines your Generacy project configuration.
# Learn more: https://docs.generacy.ai/config

# ============================================================================
# Project Metadata
# ============================================================================

project:
  # Unique project identifier
  id: "proj_abc123xyz"

  # Human-readable project name
  name: "E-Commerce API"

# ============================================================================
# Repository Configuration
# ============================================================================

repos:
  # Primary repository (receives onboarding PR)
  primary: "acme-corp/ecommerce-api"

# ============================================================================
# Default Settings
# ============================================================================

defaults:
  # Default AI agent to use for tasks
  agent: "claude-code"

  # Default base branch for pull requests
  baseBranch: "main"
"
`;

exports[`Snapshot: Special Values > should correctly render project IDs in config and env template 2`] = `
"# .generacy/generacy.env.template
#
# This is a TEMPLATE file. Copy it to \`generacy.env\` and fill in your actual values.
# The \`generacy.env\` file contains secrets and is automatically ignored by git.
#
# DO NOT commit \`generacy.env\` to version control!
# DO NOT share \`generacy.env\` in public channels!
#
# Generated: 2026-02-24T15:30:00.000Z
# Generated by: generacy-cli

# ============================================================================
# GitHub Integration
# ============================================================================

# GitHub Personal Access Token (PAT) with repo permissions
# Required for: Creating PRs, reading repositories, managing issues
# Get one at: https://github.com/settings/tokens/new
# Minimum scopes: repo, workflow (for Actions integration)
#
# SECURITY: Store securely, never commit to git, rotate regularly
GITHUB_TOKEN=

# ============================================================================
# AI Agent Configuration
# ============================================================================

# Anthropic API key for Claude Code agent
# Required for: Running AI-powered development tasks
# Get one at: https://console.anthropic.com/settings/keys
#
# SECURITY: Store securely, never commit to git
ANTHROPIC_API_KEY=

# ============================================================================
# Project Configuration
# ============================================================================

# Your Generacy project ID (auto-populated from config.yaml)
# This links your local environment to your Generacy cloud project
PROJECT_ID=proj_abc123xyz

# ============================================================================
# Local Development Configuration
# ============================================================================

# Redis URL for task queue (multi-repo orchestration)
# Default points to local Redis instance in dev container
# Override for custom Redis setup or external Redis instance
REDIS_URL=redis://redis:6379

# Logging level for Generacy agent output
# Options: debug, info, warn, error
# Default: info (recommended for development)
LOG_LEVEL=info

# ============================================================================
# Optional: Advanced Configuration
# ============================================================================

# Uncomment and configure these if you need custom behavior:

# Base branch for pull requests (overrides config.yaml default)
# BASE_BRANCH=main

# API endpoint for Generacy cloud service (for self-hosted deployments)
# GENERACY_API_URL=https://api.generacy.ai

# Custom agent configuration (overrides config.yaml default)
# AGENT=claude-code

# GitHub API base URL (for GitHub Enterprise)
# GITHUB_API_URL=https://api.github.com
"
`;

exports[`Snapshot: Special Values > should correctly render worker count in docker-compose.yml 1`] = `
"# docker-compose.yml
# Generated: 2026-02-24T16:45:30.123Z
# Schema version: 1.0.0
# Generated by: generacy-cloud
#
# Multi-repo development environment for Acme Platform
# Orchestrator + Workers architecture for parallel task execution

version: "3.8"

services:
  # ==========================================================================
  # Redis - Message queue for orchestrator/worker communication
  # ==========================================================================
  redis:
    image: redis:7-alpine
    container_name: proj_xyz789def-redis
    command: redis-server --appendonly no --save ""
    ports:
      - "6379:6379"
    healthcheck:
      test: ["CMD", "redis-cli", "ping"]
      interval: 5s
      timeout: 3s
      retries: 5
    networks:
      - generacy

  # ==========================================================================
  # Orchestrator - Main development container with all repos mounted
  # ==========================================================================
  orchestrator:
    image: mcr.microsoft.com/devcontainers/base:ubuntu
    container_name: proj_xyz789def-orchestrator

    # Install Generacy Dev Container Feature
    features:
      ghcr.io/generacy-ai/features/generacy:1: {}

    # Load environment variables from .generacy/generacy.env
    env_file:
      - ../.generacy/generacy.env

    environment:
      # Redis connection for task queue
      - REDIS_URL=redis://redis:6379

      # Orchestrator-specific settings
      - ROLE=orchestrator
      - WORKER_COUNT=3
      - POLL_INTERVAL_MS=3000

      # Project metadata
      - PROJECT_ID=proj_xyz789def
      - PROJECT_NAME=Acme Platform
      - PRIMARY_REPO=acme-corp/platform-orchestrator

    # Mount all repositories as workspace folders
    volumes:
      # Primary repository
      - ../..:/workspaces/platform-orchestrator:cached

      # Development repositories
      - ../../api-service:/workspaces/api-service:cached
      - ../../frontend-app:/workspaces/frontend-app:cached
      - ../../worker-service:/workspaces/worker-service:cached

      # Clone-only repositories (read-only)
      - ../../shared-lib:/workspaces/shared-lib:cached
      - ../../proto-definitions:/workspaces/proto-definitions:cached

      # Generacy state and cache directories
      - generacy-state:/home/vscode/.generacy
      - vscode-server:/home/vscode/.vscode-server

    working_dir: /workspaces/platform-orchestrator

    # Keep container running
    command: sleep infinity

    healthcheck:
      test: ["CMD", "test", "-f", "/home/vscode/.generacy/ready"]
      interval: 10s
      timeout: 5s
      retries: 3
      start_period: 30s

    depends_on:
      redis:
        condition: service_healthy

    networks:
      - generacy

  # ==========================================================================
  # Workers - Parallel task execution containers
  # ==========================================================================
  worker:
    image: mcr.microsoft.com/devcontainers/base:ubuntu

    # Install Generacy Dev Container Feature
    features:
      ghcr.io/generacy-ai/features/generacy:1: {}

    # Load environment variables from .generacy/generacy.env
    env_file:
      - ../.generacy/generacy.env

    environment:
      # Redis connection for task queue
      - REDIS_URL=redis://redis:6379

      # Worker-specific settings
      - ROLE=worker
      - POLL_INTERVAL_MS=3000

      # Project metadata
      - PROJECT_ID=proj_xyz789def

    # Mount all repositories as workspace folders
    volumes:
      # Primary repository
      - ../..:/workspaces/platform-orchestrator:cached

      # Development repositories
      - ../../api-service:/workspaces/api-service:cached
      - ../../frontend-app:/workspaces/frontend-app:cached
      - ../../worker-service:/workspaces/worker-service:cached

      # Clone-only repositories (read-only)
      - ../../shared-lib:/workspaces/shared-lib:cached
      - ../../proto-definitions:/workspaces/proto-definitions:cached

      # Worker-specific state (isolated from orchestrator)
      - vscode-server:/home/vscode/.vscode-server

    working_dir: /workspaces/platform-orchestrator

    # Keep container running
    command: sleep infinity

    # Scale workers based on configuration
    deploy:
      replicas: 3

    depends_on:
      redis:
        condition: service_healthy
      orchestrator:
        condition: service_healthy

    networks:
      - generacy

# ============================================================================
# Networks
# ============================================================================
networks:
  generacy:
    driver: bridge
    name: proj_xyz789def-network

# ============================================================================
# Volumes
# ============================================================================
volumes:
  # Orchestrator state (task history, logs, cache)
  generacy-state:
    name: proj_xyz789def-state

  # VS Code Server extensions and settings
  vscode-server:
    name: proj_xyz789def-vscode-server
"
`;
